# SpiderAVPro

./: .gitignore  README.md  link_config.json  main.py  manage.py  pyproject.toml  requirements.txt
BloodSpiderAPI/api/: urls.py
BloodSpiderAPI/api/com_piwivbd_h5frz1/: com_piwivbd_h5frz1_01.py  urls.py
BloodSpiderWeb/static/layui/css/: layui.css
BloodSpiderWeb/static/utils/: encryption.js  playerjs.js  videojs-http-streaming.min.js
BloodSpiderWeb/templates/pc/: csrf_403.html  default_urlconf.html  directory_index.html  index.html  technical_404.html  technical_500.html  template.html  组件.html
BloodSpiderWeb/templates/pc/公共资源/: public_css.html  public_head.html  public_js.html
BloodSpiderWeb/templates/pc/公共资源/数据解密/: com_piwivbd_h5frz1.html  解密线路分配.html
BloodSpiderWeb/templates/pc/组件/加载中组件/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
BloodSpiderWeb/templates/pc/组件/页面组件/: 分类.html  吃瓜列表.html  吃瓜搜索.html  底部TabBar.html  收藏本条吃瓜详情.html  普通返回组件.html
BloodSpiderWeb/templates/pc/页面/: 合集吃瓜列表页.html  我的收藏页.html  播放页.html  首页.html
BloodSpiderWeb/views/: all.py  urls.py
SpiderAvPro/: asgi.py  settings.py  urls.py  wsgi.py
av_spider/com_piwivbd_h5frz1/: com_piwivbd_h5frz1_01.py  get_base_url.py  link_config.json
