[project]
name = "spideravpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.5",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "pymysql>=1.1.1",
    "requests>=2.32.4",
]
